syntax = "proto3"; // Protocol Buffers의 버전 설정

// 공통 패킷 정의
message CommonPacket {
  uint32 handlerId = 1; // 핸들러 식별자 (32비트 부호 없는 정수)
  uint32 playerId = 2;  // 플레이어 식별자 (32비트 부호 없는 정수)
  string version = 3;    // 버전 정보 (문자열)
  bytes payload = 4;     // 페이로드 데이터 (바이너리 데이터)
}

// 초기 패킷 정의
message InitialPacket {
  string deviceId = 1; // 장치 식별자 (문자열)
}
